--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,42 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
-# Mod Versions
-mod_version=0.3.2
-mc_version=1.19.2
-forge_version=43.2.8
-# Build Dependency Versions
-mixin_version=0.8.5
-parchment_version=2022.08.10
-forgegradle_version=5.1.53
-mixingradle_version=0.7-SNAPSHOT
-librarian_version=1.+
 # Dependency Versions
-jei_version=11.5.0.297
-registrate_version=MC1.19-1.1.5
-# Other opt deps
-ars_version=3.15.0.501
-curio_version=5.1.1.0
+modJavaVersion=17
+# Minecraft Versions
+minecraftVersion=1.20.1
+minecraftVersionRange=[1.20.1,1.20.2]
+# Forge Versions
+neoforgeVersion=47.1.65
+neoforgeVersionRange=[47,)
+loaderVersionRange=[4.10,)
+# Mappings
+# | Channel   | Version              |                                                                                |
+# |-----------|----------------------|--------------------------------------------------------------------------------|
+# | official  | MCVersion            | Official field/method names from Mojang mapping files                          |
+# | parchment | YYYY.MM.DD-MCVersion | Open community-sourced parameter names and javadocs layered on top of official |
+parchmentChannel=parchment
+# The mapping version to query from the mapping channel.
+# This must match the format required by the mapping channel.
+parchmentVersion=2023.09.03-1.20.1
+# Build Dependencies Versions
+mixinVersion=0.8.5
+# Mod Properties
+modName=Hexerei
+modId=hexerei
+modVersion=0.3.2
+modLicense=All rights reserved
+modGroupId=net.joefoxe.hexerei
+# The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
+modAuthors=JoeFoxe
+# The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
+modDescription=Magic/Exploration/Storage Mod
+# Mod Dependency Versions
+jeiVersion=15.3.0.4
+registrateVersion=MC1.20-1.3.3
+# Other Optional Dependencies
+arsNouveauVersion=4.9.0.165
+curiosVersion=5.7.0+1.20.1
+cyanideVersion=4824162
+terraBlenderVersion=4590487
