--- a/gradle.properties
+++ b/gradle.properties
@@ -2,30 +2,43 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
-# Dependency Versions
-modJavaVersion=17
-# Minecraft Versions
-minecraftVersion=1.20.1
-minecraftVersionRange=[1.20.1,1.20.2]
-# Forge Versions
-neoforgeVersion=47.1.65
-neoforgeVersionRange=[47,)
-loaderVersionRange=[4.10,)
-# Mappings
-# | Channel   | Version              |                                                                                |
-# |-----------|----------------------|--------------------------------------------------------------------------------|
-# | official  | MCVersion            | Official field/method names from Mojang mapping files                          |
-# | parchment | YYYY.MM.DD-MCVersion | Open community-sourced parameter names and javadocs layered on top of official |
-parchmentChannel=parchment
-# The mapping version to query from the mapping channel.
-# This must match the format required by the mapping channel.
-parchmentVersion=2023.09.03-1.20.1
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+
+parchment_minecraft_version=1.21.1
+parchment_mappings_version=2024.11.17
+minecraft_version=1.21.1
+minecraft_version_range=[1.21.1, 1.22)
+neo_version=21.1.90
+neo_version_range=[21.1.0,)
+loader_version_range=[4,)
+
+## Mod Properties
+
+mod_id=hexerei
+mod_name=Hexerei
+mod_license=MIT
+mod_version=0.5
+mod_group_id=net.joefoxe.hexerei
+mod_authors=JoeFoxe
+mod_description=Magic/Exploration/Storage Mod
+
+#mod_java_version=21
+#minecraft_version=1.21.1
+#minecraft_version_range=[1.21,1.21.1)
+#neo_version=21.1.83
+#neo_version_range=[21.0.0-beta,)
+#loader_version_range=[4,)
+#parchment_minecraft_version=1.21.1
+#parchment_mappings_version=2024.11.17
+
 # Build Dependencies Versions
 mixinVersion=0.8.5
 # Mod Properties
 modName=Hexerei
 modId=hexerei
-modVersion=0.4.2.2
+modVersion=0.5
 modLicense=MIT
 modGroupId=net.joefoxe.hexerei
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
@@ -33,10 +46,11 @@ modAuthors=JoeFoxe
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 modDescription=Magic/Exploration/Storage Mod
 # Mod Dependency Versions
-jeiVersion=15.20.0.105
+jei_version=19.21.0.247
+jeiVersion=19.21.0.247
 registrateVersion=MC1.20-1.3.3
 # Other Optional Dependencies
-arsNouveauVersion=4.9.0.165
+arsNouveauVersion=5.3.3.841
 curiosVersion=5.11.0+1.20.1
 cyanideVersion=4824162
 terraBlenderVersion=4590487
